crates/keron-lang/tests/corpus/errors/check/unknown_fn_typo_suggests.keron
# A typo'd builtin call suggests the nearest known function.
val parts: List<String> = splt("a:b", ":")
